--- a/static/css/profile_student.css
+++ b/static/css/profile_student.css
@@ -34,7 +34,6 @@ body {
   font-size: 0.9rem;
 }
 
-/* Back Button */
 .back-button-container {
   padding: 1rem 2rem;
   background-color: #bcdde5;
@@ -78,12 +77,14 @@ body {
   transition: all 0.3s ease;
   border: 1px solid #000;
   overflow: hidden;
+  position: relative;
 }
 
 .profile-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 50%;
 }
 
 .profile-pic:hover {
